@@ -1,4 +1,4 @@
-/* Copyright (C) 1997-2005 Luke Howard.
+/* Copyright (C) 1997-2010 Luke Howard.
    This file is part of the nss_ldap library.
    Contributed by Luke Howard, <lukeh@padl.com>, 1997.
    (The author maintains a non-exclusive licence to distribute this file
